# masked_FALCON

./: CMakeLists.txt  README.md
apps/: ReadMe.md  chenchen_gadgets.h  chenchen_modify.h  fpr_gadgets.h  fpr_modify.h  gadgets.h  secfpr.h  test_chenchen_gadgets.c  test_final.c  test_fpr_gadgets.c  test_gadgets.c  test_secfpr.c  test_utils.c  utils.h
include/: ReadMe.md  chenchen_gadgets.h  chenchen_modify.h  fpr_gadgets.h  fpr_modify.h  gadgets.h  secfpr.h
src/: ReadMe.md  chenchen_gadgets.c  chenchen_modify.c  fpr_gadgets.c  fpr_modify.c  gadgets.c  secfpr.c  utils.c
